--- a/lights_out.html
+++ b/lights_out.html
@@ -56,7 +56,7 @@
       });
       render();
       if (state.flat().every(v=>v===0)) {
-        setTimeout(()=>alert(''+moves+' 手順でクリア！'),100);
+        setTimeout(()=>alert(''+moves+' 回のタップでクリア！'),100);
       }
     }
 
