--- a/lights_out.html
+++ b/lights_out.html
@@ -45,7 +45,7 @@
         }
         table.appendChild(tr);
       }
-      document.getElementById('moves').textContent = 'Moves: ' + moves;
+      document.getElementById('moves').textContent = 'タップした回数 : ' + moves;
     }
 
     function toggle(i,j) {
