--- a/lights_out.html
+++ b/lights_out.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lights Out 3×3</title>
   <style>
     body { font-family: sans-serif; text-align: center; margin-top: 50px; }
