--- a/regression_line.html
+++ b/regression_line.html
@@ -1,5 +1,5 @@
-<div style="position:relative;padding-top:56.25%;height:0;overflow:hidden;">
-  <iframe src="https://www.geogebra.org/classic/nkk867we&toolbar=false&menuBar=false"
+<div style="position:relative;padding-top:75%;height:0;">
+  <iframe src="https://www.geogebra.org/material/iframe/id/nkk867we/ai/true" 
           style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;">
   </iframe>
 </div>
