--- a/regression_line.html
+++ b/regression_line.html
@@ -1,3 +1,7 @@
 <div style="position:relative;padding-top:75%;height:0;">
-  <iframe scrolling="no" title="regression_line" src="https://www.geogebra.org/material/iframe/id/nkk867we/width/1817/height/830/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/false/ctl/false" width="1817px" height="830px" style="border:0px;"> </iframe>
+  <iframe scrolling="no"
+          title="regression_line"
+          src="https://www.geogebra.org/material/iframe/id/nkk867we?ai=true&menuBar=false&toolBar=false&inputBar=false"
+          style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;">
+  </iframe>
 </div>
