--- a/regression_line.html
+++ b/regression_line.html
@@ -1,7 +1,22 @@
-<div style="position:relative;padding-top:75%;height:0;">
+<div style="position:relative;padding-top:75%;height:0;overflow:hidden;">
   <iframe scrolling="no"
-          title="regression_line"
-          src="https://www.geogebra.org/material/iframe/id/nkk867we?ai=true&menuBar=false&toolBar=false&inputBar=false"
-          style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;">
+          title="My GeoGebra Material"
+          src="https://www.geogebra.org/material/iframe/id/nkk867we
+               /width/800
+               /height/600
+               /border/0
+               /ai/false       <!-- 入力バー非表示 -->
+               /smb/false      <!-- メニューバー非表示 -->
+               /stb/false      <!-- ツールバー非表示 -->
+               /stbh/false     <!-- ツールバーヘルプ非表示 -->
+               /rc/false       <!-- 右クリックメニュー無効 -->
+               /sdz/false      <!-- Shift+ドラッグズーム無効 -->
+               /ld/false       <!-- ラベルドラッグ無効 -->
+               /sri/false      <!-- リセットアイコン非表示 -->
+               /ctl/false      <!-- 再生ボタン非表示 -->
+               /sfsb/false     <!-- 全画面ボタン非表示 -->
+               /szb/false"     <!-- ズームボタン非表示 -->
+          style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
+          allowfullscreen>
   </iframe>
 </div>
