--- a/regression_line.html
+++ b/regression_line.html
@@ -1,22 +1,51 @@
-<div style="position:relative;padding-top:75%;height:0;overflow:hidden;">
-  <iframe scrolling="no"
-          title="My GeoGebra Material"
-          src="https://www.geogebra.org/material/iframe/id/nkk867we
-               /width/800
-               /height/600
-               /border/0
-               /ai/false       <!-- 入力バー非表示 -->
-               /smb/false      <!-- メニューバー非表示 -->
-               /stb/false      <!-- ツールバー非表示 -->
-               /stbh/false     <!-- ツールバーヘルプ非表示 -->
-               /rc/false       <!-- 右クリックメニュー無効 -->
-               /sdz/false      <!-- Shift+ドラッグズーム無効 -->
-               /ld/false       <!-- ラベルドラッグ無効 -->
-               /sri/false      <!-- リセットアイコン非表示 -->
-               /ctl/false      <!-- 再生ボタン非表示 -->
-               /sfsb/false     <!-- 全画面ボタン非表示 -->
-               /szb/false"     <!-- ズームボタン非表示 -->
-          style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
-          allowfullscreen>
-  </iframe>
-</div>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GeoGebra 埋め込みサンプル</title>
+  <!-- GeoGebra JS API 読み込み -->
+  <script src="https://www.geogebra.org/apps/deployggb.js"></script>
+
+  <style>
+    /* ページ余白リセット */
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+    /* 埋め込み先のサイズ調整 */
+    #ggb-element {
+      width: 100%;      /* 横幅いっぱい */
+      height: 80vh;     /* ビューポート高さの80% */
+      /* 必要なら max-width: 800px; margin: auto; などで中央寄せも可能 */
+    }
+  </style>
+</head>
+<body>
+
+  <!-- GeoGebra 埋め込み先 -->
+  <div id="ggb-element"></div>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      // GeoGebra アプレット設定
+      const params = {
+        material_id: "nkk867we",       // ← ここを自分のIDに置き換え
+        showToolBar: false,            // ツールバー非表示
+        showMenuBar: false,            // メニューバー非表示
+        showAlgebraInput: false,       // 入力バー非表示
+        enableRightClick: false,       // 右クリック無効（パン操作も不可）
+        enableShiftDragZoom: false     // Shift+ドラッグズーム無効
+      };
+      // インスタンス作成
+      const applet = new GGBApplet(params, true);
+      // 埋め込み
+      applet.inject("ggb-element");
+      // 座標範囲を固定： setCoordSystem(xMin, xMax, yMin, yMax)
+      applet.setCoordSystem(-0.5, 7, -0.5, 7);
+    });
+  </script>
+
+</body>
+</html>
