--- a/regression_line.html
+++ b/regression_line.html
@@ -1,10 +1,35 @@
-<div style="position:relative;padding-top:166.7%; /* 7.5:14 ≒ 1:1.867 */">
-  <iframe
-    src="https://www.geogebra.org/material/iframe/id/nkk867we
-         /ai/false   /smb/false  /stb/false  /stbh/false
-         /rc/false   /sdz/false  /ld/false   /sri/false
-         /szb/false  /width/800  /height/1493"
-    style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
-    scrolling="no" allowfullscreen>
-  </iframe>
-</div>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>GeoGebra シンプル埋め込み</title>
+  <style>
+    /* 縦横比 = (y 範囲) ÷ (x 範囲) = 14 ÷ 7.5 ≒ 1.8667 */
+    .ggb-container {
+      position: relative;
+      width: 100%;
+      /* padding-top に 縦横比 × 100% を指定 */
+      padding-top: 186.67%;
+      overflow: hidden;
+    }
+    .ggb-container iframe {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="ggb-container">
+    <iframe 
+      scrolling="no"
+      src="https://www.geogebra.org/material/iframe/id/nkk867we/width/1000/height/1867/border/0/ai/false/smb/false/stb/false">
+    </iframe>
+  </div>
+
+</body>
+</html>
