--- a/regression_line.html
+++ b/regression_line.html
@@ -1,51 +1,3 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GeoGebra 埋め込みサンプル</title>
-  <!-- GeoGebra JS API 読み込み -->
-  <script src="https://www.geogebra.org/apps/deployggb.js"></script>
-
-  <style>
-    /* ページ余白リセット */
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-    }
-    /* 埋め込み先のサイズ調整 */
-    #ggb-element {
-      width: 100%;      /* 横幅いっぱい */
-      height: 80vh;     /* ビューポート高さの80% */
-      /* 必要なら max-width: 800px; margin: auto; などで中央寄せも可能 */
-    }
-  </style>
-</head>
-<body>
-
-  <!-- GeoGebra 埋め込み先 -->
-  <div id="ggb-element"></div>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", function() {
-      // GeoGebra アプレット設定
-      const params = {
-        material_id: "nkk867we",       // ← ここを自分のIDに置き換え
-        showToolBar: false,            // ツールバー非表示
-        showMenuBar: false,            // メニューバー非表示
-        showAlgebraInput: false,       // 入力バー非表示
-        enableRightClick: false,       // 右クリック無効（パン操作も不可）
-        enableShiftDragZoom: false     // Shift+ドラッグズーム無効
-      };
-      // インスタンス作成
-      const applet = new GGBApplet(params, true);
-      // 埋め込み
-      applet.inject("ggb-element");
-      // 座標範囲を固定： setCoordSystem(xMin, xMax, yMin, yMax)
-      applet.setCoordSystem(-0.5, 7, -0.5, 7);
-    });
-  </script>
-
-</body>
-</html>
+<div style="position:relative;padding-top:75%;height:0;">
+  <iframe scrolling="no" title="regression_line" src="https://www.geogebra.org/material/iframe/id/nkk867we/width/1817/height/830/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/false/ctl/false" width="1817px" height="830px" style="border:0px;"> </iframe>
+</div>
