--- a/regression_line.html
+++ b/regression_line.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>GeoGebra シンプル埋め込み（縦長）</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>GeoGebra シンプル埋め込み</title>
 
-  <style>
-    html,body{margin:0;height:100%}
+<style>
+  html,body{margin:0;height:100%}
 
-    /* 画面幅 : 高さ ＝ 7.5 : 14 ≒ 0.5357 で固定   */
-    .ggb-wrap{
-      width:100%;
-      aspect-ratio:7.5/14;          /* 新しいブラウザはこれだけで OK */
-      position:relative;
-    }
+  /* 画面幅 : 高さ ＝ 7.5 : 14 なので aspect-ratio = 幅/高さ ≒ 0.5357 */
+  .ggb-wrap{
+    width:100%;
+    aspect-ratio:7.5/14;
+    position:relative;
+  }
 
-    /* ↓ 古いブラウザ向けフォールバック（aspect-ratio 未対応時） */
-    @supports not (aspect-ratio: 1/1){
-      .ggb-wrap{padding-top:186.7%;height:0}
-      .ggb-wrap iframe{position:absolute;inset:0}
-    }
+  /* aspect-ratio 未対応ブラウザ用フォールバック */
+  @supports not (aspect-ratio: 1/1){
+    .ggb-wrap{padding-top:186.7%;height:0}
+    .ggb-wrap iframe{position:absolute;inset:0}
+  }
 
-    .ggb-wrap iframe{
-      width:100%;
-      height:100%;
-      border:none;
-    }
-  </style>
+  .ggb-wrap iframe{
+    width:100%;
+    height:100%;
+    border:none;
+  }
+</style>
 </head>
 <body>
 
@@ -34,19 +34,7 @@
     <iframe
       title="GeoGebra Material"
       scrolling="no"
-      src="https://www.geogebra.org/material/iframe/id/nkk867we
-           /width/800           <!-- ← 値は何でも可。比率は CSS が担当 -->
-           /height/1493
-           /border/0
-           /ai/false
-           /smb/false
-           /stb/false
-           /stbh/false
-           /rc/false
-           /sdz/false
-           /ld/false
-           /sri/false
-           /szb/false">
+      src="https://www.geogebra.org/material/iframe/id/nkk867we/width/800/height/1493/border/0/ai/false/smb/false/stb/false/stbh/false/rc/false/sdz/false/ld/false/sri/false/szb/false">
     </iframe>
   </div>
 
