--- a/lights_out.html
+++ b/lights_out.html
@@ -8,33 +8,28 @@
     body { font-family: sans-serif; text-align: center; margin-top: 50px; }
     table { margin: auto; border-collapse: collapse; }
     td { width: 60px; height: 60px; border: 2px solid #333; cursor: pointer; }
-    .on  { background: yellow; }
+    .on { background: yellow; }
     .off { background: #555; }
-    #moves, #clearTime { margin: 12px; font-size: 1.2em; }
+    #moves { margin: 20px; font-size: 1.2em; }
     button { margin: 10px; padding: 10px 20px; }
   </style>
 </head>
 <body>
   <h1>ライツアウト 3×3</h1>
-
   <table id="grid"></table>
-  <div id="moves">タップした回数 : 0</div>
-  <div id="clearTime">クリア時間 : --.- 秒</div>   <!-- ★ 追加 ★ -->
+  <div id="moves">タップした回数: 0</div>
   <button id="reset">リセット</button>
-
   <script>
     const initialState = [
       [1,0,0],
       [0,0,1],
       [0,1,0]
     ];
-
-    let state, moves, startTime = null;
+    let state, moves;
 
     function init() {
-      state = initialState.map(r => r.slice());
+      state = initialState.map(row => row.slice());
       moves = 0;
-      /* startTime と clearTime 表示は残しておく */
       render();
     }
 
@@ -55,20 +50,14 @@
     }
 
     function toggle(i,j) {
-      if (moves === 0 && startTime === null) startTime = Date.now();  // 最初のタップで開始
-
       moves++;
       [[0,0],[1,0],[-1,0],[0,1],[0,-1]].forEach(([di,dj]) => {
-        const ni = i + di, nj = j + dj;
+        const ni = i+di, nj = j+dj;
         if (ni>=0 && ni<3 && nj>=0 && nj<3) state[ni][nj] ^= 1;
       });
       render();
-
-      if (state.flat().every(v => v === 0)) {
-        const sec = ((Date.now() - startTime) / 1000).toFixed(1);        // 経過秒
-        document.getElementById('clearTime').textContent = 'クリア時間 : ' + sec + ' 秒'; // ★ 更新 ★
-        setTimeout(() => alert(`${moves} 回のタップでクリア！\nクリア時間 : ${sec} 秒`), 100);
-        startTime = null;   // タイマーだけリセット。表示は残る
+      if (state.flat().every(v=>v===0)) {
+        setTimeout(()=>alert(''+moves+' 回のタップでクリア！'),100);
       }
     }
 
