--- a/lights_out.html
+++ b/lights_out.html
@@ -1,70 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lights Out 3×3</title>
+  <title>ライツアウト</title>
   <style>
-    body { font-family: sans-serif; text-align: center; margin-top: 50px; }
-    table { margin: auto; border-collapse: collapse; }
-    td { width: 60px; height: 60px; border: 2px solid #333; cursor: pointer; }
-    .on { background: yellow; }
-    .off { background: #555; }
-    #moves { margin: 20px; font-size: 1.2em; }
-    button { margin: 10px; padding: 10px 20px; }
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: #f0f0f0;
+      min-height: 100vh;
+    }
+    header {
+      width: 100%;
+      text-align: center;
+      background-color: #008cff;
+      color: #fff;
+      padding: 1rem 0;
+      font-size: 2rem;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    .menu {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+      margin-top: 2rem;
+    }
+    .menu a {
+      display: block;
+      text-decoration: none;
+      background-color: #008cff;
+      color: #fff;
+      padding: 0.75rem 1.5rem;
+      border-radius: 0.5rem;
+      font-size: 1.25rem;
+      transition: background-color 0.3s;
+      width: 200px;
+      text-align: center;
+    }
+    .menu a:hover {
+      background-color: #005bb5;
+    }
   </style>
 </head>
 <body>
-  <h1>ライツアウト 3×3</h1>
-  <table id="grid"></table>
-  <div id="moves">タップした回数: 0</div>
-  <button id="reset">リセット</button>
-  <script>
-    const initialState = [
-      [1,0,0],
-      [0,0,1],
-      [0,1,0]
-    ];
-    let state, moves;
-
-    function init() {
-      state = initialState.map(row => row.slice());
-      moves = 0;
-      render();
-    }
-
-    function render() {
-      const table = document.getElementById('grid');
-      table.innerHTML = '';
-      for (let i = 0; i < 3; i++) {
-        const tr = document.createElement('tr');
-        for (let j = 0; j < 3; j++) {
-          const td = document.createElement('td');
-          td.className = state[i][j] ? 'on' : 'off';
-          td.addEventListener('click', () => toggle(i,j));
-          tr.appendChild(td);
-        }
-        table.appendChild(tr);
-      }
-      document.getElementById('moves').textContent = 'タップした回数 : ' + moves;
-    }
-
-    function toggle(i,j) {
-      moves++;
-      [[0,0],[1,0],[-1,0],[0,1],[0,-1]].forEach(([di,dj]) => {
-        const ni = i+di, nj = j+dj;
-        if (ni>=0 && ni<3 && nj>=0 && nj<3) state[ni][nj] ^= 1;
-      });
-      render();
-      if (state.flat().every(v=>v===0)) {
-        setTimeout(()=>alert(''+moves+' 回のタップでクリア！'),100);
-      }
-    }
-
-    document.getElementById('reset').addEventListener('click', init);
-
-    // 初期化
-    init();
-  </script>
+  <header>ライツアウト</header>
+  <nav class="menu">
+    <a href="shokyu.html">初級</a>
+    <a href="chukyu.html">中級</a>
+    <a href="joukyu.html">上級？</a>
+  </nav>
 </body>
 </html>
