--- a/lights_out.html
+++ b/lights_out.html
@@ -50,9 +50,9 @@
 <body>
   <header>ライツアウト</header>
   <nav class="menu">
-    <a href="shokyu.html">初級</a>
-    <a href="chukyu.html">中級</a>
-    <a href="joukyu.html">上級？</a>
+    <a href="lights_out_2-2.html">初級</a>
+    <a href="lights_out_2-3_v1.html">中級</a>
+    <a href="lights_out_2-3_v2.html">上級？</a>
   </nav>
 </body>
 </html>
