--- a/lights_out_2-2.html
+++ b/lights_out_2-2.html
@@ -65,5 +65,8 @@
     // 初期化
     init();
   </script>
+  <div class="back-link">
+    <a href="lights_out.html">← 戻る</a>
+  </div>
 </body>
 </html>
