--- a/lights_out_2-2.html
+++ b/lights_out_2-2.html
@@ -64,7 +64,7 @@
 
     // 初期化
     init();
-  </script>
+  </script><br><br>
   <div class="back-link">
     <a href="lights_out.html">← 戻る</a>
   </div>
