--- a/lights_out_2-3_v2.html
+++ b/lights_out_2-3_v2.html
@@ -64,6 +64,9 @@
 
     // 初期化
     init();
-  </script>
+  </script><br><br>
+  <div class="back-link">
+    <a href="lights_out.html">戻る</a>
+  </div>
 </body>
 </html>
