--- a/lights_out_2-2.html
+++ b/lights_out_2-2.html
@@ -66,7 +66,7 @@
     init();
   </script><br><br>
   <div class="back-link">
-    <a href="lights_out.html">← 戻る</a>
+    <a href="lights_out.html">戻る</a>
   </div>
 </body>
 </html>
