--- a/lights_out_2-3_v1.html
+++ b/lights_out_2-3_v1.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <h1>ライツアウト（中級）</h1>
+  <h1>ライツアウト（初級2）</h1>
   <table id="grid"></table>
   <div id="moves">タップした回数: 0</div>
   <button id="reset">リセット</button>
