--- a/lights_out.html
+++ b/lights_out.html
@@ -50,8 +50,9 @@
 <body>
   <header>ライツアウト</header>
   <nav class="menu">
-    <a href="lights_out_2-2.html">初級</a>
-    <a href="lights_out_2-3_v1.html">中級</a>
+    <a href="lights_out_2-2.html">初級1</a>
+    <a href="lights_out_2-3_v1.html">初級2</a>
+    <a href="lights_out_3-3.html">中級</a>
     <a href="lights_out_2-3_v2.html">上級？</a>
   </nav>
 </body>
